# dungeon_maze

./: .gitignore  Cargo.toml  Makefile
assets/: Chair.glb
assets/meshes/: Wall_with_door_gap.glb  wall_with_window_gap.glb
assets/models/: Broadsword.glb  Door.glb  Katana.glb  Staircase.glb  Window.glb  stairs.glb
assets/world_structures/: FilledWithChairs1.json  House1.json  None.json  StaircaseTower2.json  StairsAltar1.json
crates/common/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: lib.rs  main.rs
crates/game/src/plugins/: animation.rs  camera.rs  cursor.rs  debug.rs  hud.rs  interaction.rs  inventory.rs  menu.rs  mod.rs  player.rs  save.rs  settings.rs
crates/game/src/plugins/world/: chunk_generator.rs  chunk_generator_test.rs  mod.rs
crates/game/src/plugins/world/bundle/: cell.rs  chunk.rs  door.rs  item.rs  mod.rs  special.rs  wall.rs  window.rs
crates/proc_macros/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
editor/: package-lock.json  package.json
editor/src/: App.tsx
src/: animation.rs  camera.rs  chunk.rs  chunk_test.rs  cursor.rs  debug.rs  error.rs  hud.rs  interaction.rs  inventory.rs  inventory_test.rs  main.rs  maze.rs  maze_test.rs  menu.rs  meshes.rs  player.rs  save.rs  settings.rs  world.rs
src/inventory/: equipment.rs  mod.rs  systems.rs
src/meshes/: mod.rs  wall_with_door_gap.rs  wall_with_window_gap.rs
src/player/: attack.rs  mod.rs
src/utils/: asset.rs  debug.rs  dev.rs  entity.rs  maze.rs  mod.rs  noise.rs  rng.rs
src/world/: data.rs  mod.rs  systems.rs  world_structure.rs
(+49 files in other folders)
