[package]
name = "dungeon_maze_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = [ "jpeg" ] }
bevy-inspector-egui = "0.27.0"
bevy_embedded_assets = "0.11"
bevy_rapier3d = "0.27.0"
bevy_text_popup = "0.4.0"
bevy_third_person_camera = "0.1.14"
chrono = "0.4.38"
dungeon_maze_common = { path = "../common" }
dungeon_maze_proc_macros = { path = "../proc_macros" }
platform-dirs = "0.3.0"
rand = "0.8.5"
serde_json = "1.0.132"
strum = "0.26.3"
